app 优化 框架底层优化

--- a/appliaction/study/view/index/index/index_en.html
+++ b/appliaction/study/view/index/index/index_en.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-	{include public/top}
+	{include public/top_en}
     <div class="banner clearfix">
         <div class="swiper-container">
             <div class="swiper-wrapper banner_adjust">
@@ -31,23 +31,21 @@
     </div>  
 	<div class="index_ab fadeInUp animated adjust">
     	<div class="title ">
-        	<h3>期待中的我们</h3>
+        	<h3>ABOUT US</h3>
             <i class="line"></i>
-            <span>ABOUT&nbsp;&nbsp;US</span>
         </div>
-    	<div class="cont_p " ><p>创立至今始终坚持帮助更多中国人快乐、自信、便捷地掌握流利英语，并实现成功梦想为使命，全方位地解决不同学员英语学习中遇到的各种问题和困难。每年为国家公务员、跨国机构、各行业职员、在校大学生等等在内的数万学员提高英语水平。我们和你都有共同的目标，那就是让你有更加优质的生活，并在学习英语的过程中给予最大的帮助</p> </div>
+    	<div class="cont_p " ><p>Since the creation has always been to help more Chinese people happy, confident, easy to master fluent in English, and to achieve a successful dream for the mission, all-round solution to different students in English learning problems and difficulties encountered. Each year for the national civil servants, multinational institutions, industry staff, college students, etc., including tens of thousands of students to improve the level of English. We and you have a common goal, that is to let you have a better quality of life, and in the process of learning English to give the greatest help</p> </div>
     	<a class="more" href="#">MORE++</a>
     </div>    
     
 	<div class="index_ab clearfix  ">
     	<div class="title fadeInUp animated">
-        	<h3>恒鼎学习社区</h3>
+        	<h3>Hengding Learning Community</h3>
             <i class="line"></i>
-            <span>HENGDING&nbsp;LEARNING&nbsp;COMMUNITY</span>
         </div>
     	<div class="news_four clearfix width1200 ">
         	<div class="li_div fadeInUp animated">
-            	<div class="title_s"><span>最新资讯</span><a href="#">...</a></div>
+            	<div class="title_s"><span>Latest News</span><a href="#">...</a></div>
             	<div class="img_left">
                 	<div class="img_1"><a href="#"><img src="/ststic/study/images/img01.jpg" /><span>雅思口语介绍</span></a></div>
                 	<div class="img_1"><a href="#"><img src="/ststic/study/images/img01.jpg" /><span>雅思口语介绍</span></a></div>
@@ -73,7 +71,7 @@
             </div>
         	
         	<div class="li_div fadeInUp animated">
-            	<div class="title_s"><span>生活交流专区</span><a href="#">...</a></div>
+            	<div class="title_s"><span>Life Exchange Area</span><a href="#">...</a></div>
                 <div class="tie_li clearfix">
                     <div class="left_tie"><span><b>920000</b><i>回复</i></span></div>
                     <div class="right_tie">
@@ -101,7 +99,7 @@
             </div>
             
         	<div class="li_div fadeInUp animated">
-            	<div class="title_s"><span>学习讨论专区</span><a href="#">...</a></div>
+            	<div class="title_s"><span>Study Discussion Area</span><a href="#">...</a></div>
                 <div class="tie_li clearfix">
                     <div class="left_tie"><span><b>920000</b><i>回复</i></span></div>
                     <div class="right_tie">
@@ -128,7 +126,7 @@
                 </div>
             </div>
         	<div class="li_div fadeInUp animated">
-            	<div class="title_s"><span>留学与国际专区</span><a href="#">...</a></div>
+            	<div class="title_s"><span>Study Abroad And International Area</span><a href="#">...</a></div>
                 <div class="tie_li clearfix">
                     <div class="left_tie"><span><b>920000</b><i>回复</i></span></div>
                     <div class="right_tie">
@@ -161,15 +159,15 @@
     
 	<div class="index_ab ">
     	<div class="title fadeInUp animated">
-        	<h3>赶快开始您的旅程吧</h3>
+        	<h3>Start your journey now</h3>
             <i class="line"></i>
-            <span>START&nbsp;YOUR&nbsp;JOURNEY&nbsp;NOW</span>
+           <!--  <span>START&nbsp;YOUR&nbsp;JOURNEY&nbsp;NOW</span> -->
         </div>
 		<div class="notice fadeInUpBig animated width1200" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUpBig; margin:0 auto;  ">
             	<div class="tab-hd width1200">
             		<ul class="tab-nav fadeInUp animated">
-            			<li ><a  >国际商学院</a></li>
-                        <li class="on"><a >高中部</a></li>
+            			<li ><a>国际商学院</a></li>
+                        <li class="on"><a>高中部</a></li>
             		</ul>
             	</div>
             	<div class="tab-bd clearfix">
@@ -257,8 +255,8 @@
     <br/>
     <br/>
     	<div class="why_midd fadeInUp animated width1200">
-        	<h3>为什么选着我们？</h3>
-        	<p>相比免费公开课，培训课程上课时间多很多；并且是科学系统的整套内容，这样能让你的知识形成体系，更不容易忘记；循序渐进的讲起，也更利于你的吸收；这样就能胜任工作中的方方面面。</p>
+        	<h3>Why choose us ?</h3>
+        	<p>Compared to the free open class, the training course more time; and is the scientific system of the whole set of content, so that your knowledge to form a system, not easy to forget; step by step, and more conducive to your absorption; Competent in the work of all aspects.</p>
         </div>
     
     
@@ -268,9 +266,9 @@
     <div class="team_boxs clearfix">
     	<div class="team_boxs_midd width1200">
             <div class="title fadeInUp animated">
-                <h3>恒鼎学院教研团队</h3>
+                <h3>Hengding College teaching and research team</h3>
                 <i class="line"></i>
-                <span>HENGDING&nbsp;COLLEGE&nbsp;TEACHING&nbsp;AND&nbsp;RESEARCH&nbsp;TEAM</span>
+                <!-- <span>HENGDING&nbsp;COLLEGE&nbsp;TEACHING&nbsp;AND&nbsp;RESEARCH&nbsp;TEAM</span> -->
              </div>
         	 <div class="notice width1200" style="margin:0 auto">
             	<div class="tab-hd">
@@ -478,7 +476,7 @@
 			</script>
 
 <div class="clearfix"></div>
-	{include public/footer}                                                                                         
+	{include public/footer_en}                                                                                         
 </body>
 <script>
 jQuery(".notice").slide({ titCell:".tab-hd li", mainCell:".tab-bd",delayTime:0 });
