--- a/appliaction/admin/view/content/app_version/edit.html
+++ b/appliaction/admin/view/content/app_version/edit.html
@@ -20,17 +20,7 @@
 								<span>上传文件</span>
 							</label>
 							<div class="col-sm-8">
-								<a class="btn btn-primary btn-files" data-name="thumb" data-value='{??$data['thumb']}' data-path="category" data-max="1">添加文件</a>
-							</div>
-						</div>
-
-						<div class="form-group">
-							<label class="control-label col-sm-3">
-								<span class="text-danger">*</span>
-								<span>上传文件2</span>
-							</label>
-							<div class="col-sm-8">
-								<a class="btn btn-primary btn-files" data-name="thumb2" data-value='{??$data['thumb']}' data-path="category" data-max="1">添加文件2</a>
+								<a class="btn btn-primary pull-left btn-files" data-name="thumb" data-value='{??$data['thumb']}' data-path="category" data-max="1">添加文件</a>
 							</div>
 						</div>
 
