--- a/appliaction/admin/view/content/article_list/lists.html
+++ b/appliaction/admin/view/content/article_list/lists.html
@@ -78,7 +78,7 @@
 											<td align='center'>
 												<a data-href="{F:url('article_edit/edit',array('column_id'=>$value['column_id'],'id'=>$value['id']))}" data-title="编辑文章" data-width="90%"  data-height="800px" class="btn-open">编辑</a>
 												<span class="text-explode">|</span>
-												<a ng-click="delete(list.id)">删除</a>
+												<a data-href="{F:url('article_edit/del_article')}" class="btn-ajax-post" data-tips="确定删除【{$value['title']}】?" data-id="{$value['id']}">删除</a>
 											</td>
 										</tr>
 										{/loop}
