--- a/appliaction/admin/view/content/menus/edit.html
+++ b/appliaction/admin/view/content/menus/edit.html
@@ -130,10 +130,19 @@
 								<div class="form-group">
 									<label class="control-label col-sm-3">
 										<span class="text-danger">*</span>
-										<span>请求地址</span>
+										<span>后台请求地址</span>
 									</label>
 									<div class="col-sm-8">
 										<input type="text" value="{??$data['url']}" name="url" placeholder="请求地址" class="form-control">
+									</div>
+								</div>
+								<div class="form-group">
+									<label class="control-label col-sm-3">
+										<span class="text-danger">*</span>
+										<span>前台请求地址</span>
+									</label>
+									<div class="col-sm-8">
+										<input type="text" value="{??$data['jump_url']}" name="jump_url" placeholder="请求地址" class="form-control">
 									</div>
 								</div>
 								<div class="form-group radio" data-radio="{??$data['is_show']}">
