--- a/appliaction/blog/view/index/index/index.html
+++ b/appliaction/blog/view/index/index/index.html
@@ -78,9 +78,9 @@
 		<div class="clearfix"></div>
 	</div>
 	{include /public/footer}
-	<script type="text/javascript" src="{F:getConfig('config','ststic')}/console/js/jquery-1.12.3.min.js"></script>
+	<script type="text/javascript" src="{F:getConfig('config','ststic')}/blog/js/jquery-1.12.3.min.js"></script>
+	<script type="text/javascript" src="{F:getConfig('config','ststic')}/blog/js/common.js"></script>
 	<script type="text/javascript" src="{F:getConfig('config','vendor')}/pace/pace.min.js"></script>
 	<script type="text/javascript" src="{F:getConfig('config','vendor')}/layer/layer.js"></script>
-	<script type="text/javascript" src="{F:getConfig('config','ststic')}/blog/js/common.js"></script>
 </body>
 </html>
