--- a/public/ststic/study/css/comm.css
+++ b/public/ststic/study/css/comm.css
@@ -156,7 +156,7 @@
 .li_div  .tie_li .left_tie i{ font-size:12px}
 .li_div .tie_li .right_tie{ float:right;/* width:460px;*/ }
 .li_div .tie_li .right_tie .name{ /*line-height:20px;  width:460px; height:29px;*/  float:left;  display:block}
-.li_div .tie_li .right_tie .name .biaoqian{ display:block; line-height:20px; float:left; margin-left:10px; padding:0 10px}
+.li_div .tie_li .right_tie .name .biaoqian{ display:block; line-height:20px; float:right; margin-left:10px; padding:0 10px}
 .li_div .tie_li .right_tie .name span{ display:block; float:left;color:#333; display:block; /*max-width:330px;*/ height:30px; line-height:30px; overflow:hidden}
 .li_div .tie_li .right_tie  .zd{ color:#0b6aba; border:#0b6aba 1px solid; border-radius:5px}
 .li_div .tie_li .right_tie  .jh{ color:#e79e37; border:#e79e37 1px solid; border-radius:5px}
@@ -616,7 +616,7 @@
     }
     .banner{
         position:relative;
-        top:-90px;
+        /*top:-90px;*/
     }
     .banner_adjust>div{
         overflow:hidden;
@@ -636,7 +636,7 @@
         transform: translateX(-50%);
     }
     .adjust{
-        margin-top:-90px !important;
+        margin-top:0px !important;
     }
     .aside_menu{
         position:fixed;
