--- a/appliaction/admin/view/content/article_edit/edit_3.html
+++ b/appliaction/admin/view/content/article_edit/edit_3.html
@@ -236,9 +236,7 @@
 								<span>中文内容</span>
 							</label>
 							<div class="col-sm-8">
-							 	<script id="content" name="info[content]" type="text/plain" class="ue-editor">
-							 	{??$data['content']}
-							 	</script>
+							 	<script id="content" name="info[content]" type="text/plain" class="ue-editor" style="height: 400px;">{??$data['content']}</script>
 							</div>
 						</div>
 						<div class="form-group">
@@ -247,7 +245,7 @@
 								<span>英文内容</span>
 							</label>
 							<div class="col-sm-8">
-							 	<script id="content_en" name="info[content_en]" type="text/plain" class="ue-editor">
+							 	<script id="content_en" name="info[content_en]" type="text/plain" class="ue-editor" style="height: 400px;">
 							 	{??$data['content_en']}
 							 	</script>
 							</div>
