--- a/appliaction/admin/view/index/index/index.html
+++ b/appliaction/admin/view/index/index/index.html
@@ -16,7 +16,7 @@
 			</div>
 			<div class="border-top-right fr">
 				<ul>
-					<li><a href="javascript:;">{$this->consoleName}</a></li>
+					<li><a href="{F:url('/setting/personal/edit')}" target="iframe0">{$this->consoleName}</a></li>
 					<li><a href="{F:url('login/login_out')}">退出</a></li>
 				</ul>
 			</div>
