--- a/appliaction/admin/view/setting/admin/index.html
+++ b/appliaction/admin/view/setting/admin/index.html
@@ -43,7 +43,7 @@
 											<td>{$value['id']}</td>
 											<td>{$value['username']}</td>
 											<td>{$value['nickname']}</td>
-											<td>{$value['group']}</td>
+											<td>{$groupList[$value['group']]}</td>
 											<td>{$value['mobile']}</td>
 											<td>{F:date('Y-m-d H:i',$value['created'])}</td>
 											<td>{F:date('Y-m-d H:i',$value['login_time'])}</td>
