--- a/appliaction/study/view/index/about/index_en.html
+++ b/appliaction/study/view/index/about/index_en.html
@@ -44,7 +44,7 @@
                     	<div class="our_se">
                         	<div class="service">
                         	<h3>Our service system</h3>
-                            <p>该团队本着“教学促科研，科研出成果，成果获奖励，成果报项目，项目奖项带队伍，教师队伍促教学”的六环紧扣原则，提出了教改成果六个“一”的目标，即主持一批课题、建设一批精品课程、出版一批规划教材、研发一组考研品牌课程</p></div>
+                            <p>The team sticks to the principle of "six principles of teaching and promoting scientific research, fruitful achievements, rewarding achievements, rewarding projects, winning awards with projects, and promoting teaching through contingent of teachers", put forward the goal of six "one" education reform results, That is, presided over a number of topics, building a number of quality courses, publishing a number of planning materials, research and development of a group of Kaoyan brand courses</p></div>
                             <b>澳洲恒鼎学院</b>
                             <div class="map_img"><img src="/ststic/study/images/map.jpg" /></div>
                             <h1>联系我们</h1>
