--- a/appliaction/admin/view/setting/parameter/lists.html
+++ b/appliaction/admin/view/setting/parameter/lists.html
@@ -58,9 +58,9 @@
 							</fieldset>
 						</div>
 					</div>
-					<div class="modal-footer pull-left">
-						<button type="button" class="btn btn-primary btn-comply">保存</button>
-						<button type="button" class="btn btn-default" id="btn-close">取消</button>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-primary btn-comply pull-left">保存</button>
+						<button type="button" class="btn btn-default pull-left" id="btn-close">取消</button>
 					</div>
 							</div>
 						</div>
