--- a/appliaction/admin/view/setting/personal/edit.html
+++ b/appliaction/admin/view/setting/personal/edit.html
@@ -4,20 +4,32 @@
 	<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=8">
 	<meta name="keywords" content=""/>
+	<meta name="viewport" content="initial-scale=1, maximum-scale=3, minimum-scale=1, user-scalable=no">
 	<title>后台管理</title>
 	{include /public/global_css}
 </head>
   	<body>
-	<div id="console-setting-admin-edit">
-		<div class="modal-content">
-			<form class="form-horizontal">
-				<div class="modal-body clearfix">
-					<div class="panel">
+		<div id="console-setting-menus-index">
+		<div class="view-content-container" >
+			<div class="row">
+				<form class="form-horizontal">
+					<div class="col-sm-12">
+						<div class="console-title console-title-border clearfix">
+							<div class="pull-left">
+								<h5>参数配置</h5>
+							</div>
+							<div class="pull-right">
+								<a class="btn btn-primary btn-open" data-href="{F:url('edit')}"  data-height="750px">添加配置</a>
+							</div>
+						</div>
+						<div class="console-form">
+							<div class="mt8">
+								<div class="panel">
 						<div class="panel-body">
 							<fieldset>
 								<div class="form-group">
 									<label class="control-label col-sm-3">
-										<span class="text-danger">*</span>
+										<span class="text-danger"></span>
 										<span>昵称</span>
 									</label>
 									<div class="col-sm-8">
@@ -26,29 +38,38 @@
 								</div>
 								<div class="form-group">
 									<label class="control-label col-sm-3">
-										<span class="text-danger">*</span>
+										<span class="text-danger"></span>
 										<span>用户名</span>
 									</label>
 									<div class="col-sm-8">
-										<input type="text" value="{??$data['username']}" name="username" placeholder="用户名" class="form-control" {if $data['username']}disabled{/if}>	
+										<input type="text" value="{??$data['username']}" name="username" placeholder="用户名" class="form-control" disabled>	
 									</div>
 								</div>
 								<div class="form-group">
 									<label class="control-label col-sm-3">
-										<span class="text-danger">*</span>
+										<span class="text-danger"></span>
 										<span>新密码</span>
 									</label>
 									<div class="col-sm-8">
-										<input type="password" value="{??$data['password']}" name="password" placeholder="密码" class="form-control">	
+										<input type="password" value="{??$data['password']}" name="password" placeholder="请输入密码" class="form-control">	
 									</div>
 								</div>
 								<div class="form-group">
 									<label class="control-label col-sm-3">
-										<span class="text-danger">*</span>
+										<span class="text-danger"></span>
+										<span>重复新密码</span>
+									</label>
+									<div class="col-sm-8">
+										<input type="password"  name="password2" placeholder="重复新密码" class="form-control">	
+									</div>
+								</div>
+								<div class="form-group">
+									<label class="control-label col-sm-3">
+										<span class="text-danger"></span>
 										<span>所属分组</span>	
 									</label>
 									<div class="col-sm-8">
-										<select name="group" class="form-control w160" data-selected="{??$data['group']}" >
+										<select name="group" class="form-control w160" data-selected="{??$data['group']}" disabled>
 											{loop $groupList $key $value}
 											<option value="{$value['id']}" >{$value['name']}</option>
 											{/loop}
@@ -58,36 +79,26 @@
 
 								<div class="form-group">
 									<label class="control-label col-sm-3">
-										<span class="text-danger">*</span>
+										<span class="text-danger"></span>
 										<span>手机号</span>	
 									</label>
 									<div class="col-sm-8">
 										<input type="text" value="{??$data['mobile']}" name="mobile" placeholder="手机号" class="form-control">
 									</div>
 								</div>
-								
-								<div class="form-group radio" data-radio="{??$data['status']}">
-									<label class="control-label col-sm-3">状态：</label>
-									<div class="radio-inline">
-										<label>
-											<input type="radio"  name="status" value="1" > 开启
-										</label>
-									</div>
-									<div class="radio-inline">
-										<label >
-											<input type="radio"  name="status" value="0"> 关闭
-										</label>
-									</div>
-								</div>	
+
 							</fieldset>
 						</div>
 					</div>
-					</div>
 					<div class="modal-footer">
-						<button type="button" class="btn btn-primary btn-comply" click="comply">确定</button>
-						<button type="button" class="btn btn-default" id="btn-close">取消</button>
+						<button type="button" class="btn btn-primary btn-comply pull-left">保存</button>
+						<button type="button" class="btn btn-default pull-left" id="btn-close">取消</button>
+					</div>
+							</div>
+						</div>
 					</div>
 				</form>
+			</div>
 		</div>
 	</div>
 	{include /public/global_js}
