--- a/appliaction/study/view/index/index/index.html
+++ b/appliaction/study/view/index/index/index.html
@@ -77,7 +77,7 @@
                 <div class="tie_li clearfix">
                     <div class="left_tie"><span><b>920000</b><i>回复</i></span></div>
                     <div class="right_tie">
-                        <p class="name"><span>关晓彤谎报身高，身高，杨洋</span><br><em class="biaoqian zd">置顶</em><em class="biaoqian jh">精华</em></p>
+                        <p class="name"><span>关晓彤谎报身高，身高，杨洋</span><em class="biaoqian zd">置顶</em><em class="biaoqian jh">精华</em></p>
                         <div class="img"><img src="/ststic/study/images/team2.jpg" / ></div>
                         <p class="tie_f"><b>张散散</b>发起了话题<i>·</i>2天前<i>·</i>最后回复<b>飞鱼</b><i>·</i></p>
                     </div>
@@ -85,7 +85,7 @@
                 <div class="tie_li clearfix">
                     <div class="left_tie"><span><b>4</b><i>回复</i></span></div>
                     <div class="right_tie">
-                        <p class="name"><span>关晓彤谎报身高，而张艺兴报净身高泄露她真实身高，杨洋</span><br><em class="biaoqian zd">置顶</em><em class="biaoqian jh">精华</em></p>
+                        <p class="name"><span>关晓彤谎报身高，而张艺兴报净身高泄露她真实身高，杨洋</span><em class="biaoqian zd">置顶</em><em class="biaoqian jh">精华</em></p>
                         <div class="img"><img src="/ststic/study/images/team2.jpg" / ></div>
                         <p class="tie_f"><b>张散散</b>发起了话题<i>·</i>2天前<i>·</i>最后回复<b>飞鱼</b><i>·</i></p>
                     </div>
@@ -93,7 +93,7 @@
                 <div class="tie_li clearfix">
                     <div class="left_tie"><span><b>4</b><i>回复</i></span></div>
                     <div class="right_tie">
-                        <p class="name"><span>关晓彤谎报身高，而张艺兴报净身高泄露她真实身高，杨洋</span><br><em class="biaoqian jh">精华</em></p>
+                        <p class="name"><span>关晓彤谎报身高，而张艺兴报净身高泄露她真实身高，杨洋</span><em class="biaoqian jh">精华</em></p>
                         <div class="img"><img src="/ststic/study/images/team2.jpg" / ></div>
                         <p class="tie_f"><b>张散散</b>发起了话题<i>·</i>2天前<i>·</i>最后回复<b>飞鱼</b><i>·</i></p>
                     </div>
@@ -105,7 +105,7 @@
                 <div class="tie_li clearfix">
                     <div class="left_tie"><span><b>920000</b><i>回复</i></span></div>
                     <div class="right_tie">
-                        <p class="name"><span>关晓彤谎报身高，而张艺兴报净身高泄露她真实身高，杨洋</span><br><em class="biaoqian zd">置顶</em></p>
+                        <p class="name"><span>关晓彤谎报身高，而张艺兴报净身高泄露她真实身高，杨洋</span><em class="biaoqian zd">置顶</em></p>
                         <div class="img"><img src="/ststic/study/images/team2.jpg" / ></div>
                         <p class="tie_f"><b>张散散</b>发起了话题<i>·</i>2天前<i>·</i>最后回复<b>飞鱼</b><i>·</i></p>
                     </div>
@@ -113,7 +113,7 @@
                 <div class="tie_li clearfix">
                     <div class="left_tie"><span><b>4</b><i>回复</i></span></div>
                     <div class="right_tie">
-                        <p class="name"><span>关晓彤谎报身高，而张艺兴报净身高泄露她真实身高，杨洋</span><br><em class="biaoqian jh">精华</em></p>
+                        <p class="name"><span>关晓彤谎报身高，而张艺兴报净身高泄露她真实身高，杨洋</span><em class="biaoqian jh">精华</em></p>
                         <div class="img"><img src="/ststic/study/images/team2.jpg" / ></div>
                         <p class="tie_f"><b>张散散</b>发起了话题<i>·</i>2天前<i>·</i>最后回复<b>飞鱼</b><i>·</i></p>
                     </div>
@@ -121,7 +121,7 @@
                 <div class="tie_li clearfix">
                     <div class="left_tie"><span><b>4</b><i>回复</i></span></div>
                     <div class="right_tie">
-                        <p class="name"><span>关晓彤谎报身高，而张艺兴报净身高泄露她真实身高，杨洋</span><br><em class="biaoqian jh">精华</em></p>
+                        <p class="name"><span>关晓彤谎报身高，而张艺兴报净身高泄露她真实身高，杨洋</span><em class="biaoqian jh">精华</em></p>
                         <div class="img"><img src="/ststic/study/images/team2.jpg" / ></div>
                         <p class="tie_f"><b>张散散</b>发起了话题<i>·</i>2天前<i>·</i>最后回复<b>飞鱼</b><i>·</i></p>
                     </div>
@@ -132,7 +132,7 @@
                 <div class="tie_li clearfix">
                     <div class="left_tie"><span><b>920000</b><i>回复</i></span></div>
                     <div class="right_tie">
-                        <p class="name"><span>关晓彤谎报身高，而张艺兴报净身高泄露她真实身高，杨洋</span><br><em class="biaoqian zd">置顶</em></p>
+                        <p class="name"><span>关晓彤谎报身高，而张艺兴报净身高泄露她真实身高，杨洋</span><em class="biaoqian zd">置顶</em></p>
                         <div class="img"><img src="/ststic/study/images/team2.jpg" / ></div>
                         <p class="tie_f"><b>张散散</b>发起了话题<i>·</i>2天前<i>·</i>最后回复<b>飞鱼</b><i>·</i></p>
                     </div>
@@ -140,7 +140,7 @@
                 <div class="tie_li clearfix">
                     <div class="left_tie"><span><b>4</b><i>回复</i></span></div>
                     <div class="right_tie">
-                        <p class="name"><span>关晓彤谎报身高，而张艺兴报净身高泄露她真实身高，杨洋</span><br><em class="biaoqian jh">精华</em></p>
+                        <p class="name"><span>关晓彤谎报身高，而张艺兴报净身高泄露她真实身高，杨洋</span><em class="biaoqian jh">精华</em></p>
                         <div class="img"><img src="/ststic/study/images/team2.jpg" / ></div>
                         <p class="tie_f"><b>张散散</b>发起了话题<i>·</i>2天前<i>·</i>最后回复<b>飞鱼</b><i>·</i></p>
                     </div>
@@ -148,7 +148,7 @@
                 <div class="tie_li clearfix">
                     <div class="left_tie"><span><b>4</b><i>回复</i></span></div>
                     <div class="right_tie">
-                        <p class="name"><span>关晓彤谎报身高，而张艺兴报净身高泄露她真实身高，杨洋</span><br><em class="biaoqian jh">精华</em></p>
+                        <p class="name"><span>关晓彤谎报身高，而张艺兴报净身高泄露她真实身高，杨洋</span><em class="biaoqian jh">精华</em></p>
                         <div class="img"><img src="/ststic/study/images/team2.jpg" / ></div>
                         <p class="tie_f"><b>张散散</b>发起了话题<i>·</i>2天前<i>·</i>最后回复<b>飞鱼</b><i>·</i></p>
                     </div>
