--- a/appliaction/study/view/index/public/top_en.html
+++ b/appliaction/study/view/index/public/top_en.html
@@ -1,11 +1,15 @@
 <div class="header clearfix">
 	<div class="header_box  width1201">
-        <div class="header_left fl"><b>Hello, welcome to Hengding College！</b><a href="login.html">Sign in<i>|</i></a><a href="reg.html">Registered</a></div>
+        {if !$this->uid}
+        <div class="header_left fl"><b>Hello, welcome to Hengding College！</b><a href="{F:url('/index/user/login')}">Sign in<i>|</i></a><a href="{F:url('/index/user/register')}">Registered</a></div>
+        {else}
+        <div class="header_left fl"><b>{$this->nickname} Hello, welcome to Hengding College！</b><a href="javascript:;" class="btn-ajax-post" data-id="" data-href="{F:url('/index/user/outlogin')}" data-tips="确定退出登录?">退出登录</a></div>
+        {/if}
         <div class="ch_en" href="javascript:;" >
         	<a href="javascript:;" class="btn-ajax-post" data-id="" data-href="/common/version/switchlg">中文</a>|
-        	<a href="javascript:;" class="btn-ajax-post on" data-id="" data-href="/common/version/switchlg">English</a>
+        	<a href="javascript:;" class="btn-ajax-post on">English</a>
         </div>
-        <div class="header_right fr"><input /><a class="search_ico" href="javascript:;">Search</a><a href="user.html" class="user_ico"><i></i>Member</a></div>
+        <div class="header_right fr"><input /><a class="search_ico" href="javascript:;">Search</a><a href="{F:url('/index/user/login')}" class="user_ico"><i></i>Member</a></div>
     </div>
 </div>
 <div class="search_box">
@@ -37,9 +41,9 @@ $(document).ready(function(){
 			        $map['parentid'] = 0;
 			        $map['is_show']  = 1;
 
-			        $columnList = table('Column')->where($map)->field('id,name,bname,jump_url')->find('array');
+			        $topList = table('Column')->where($map)->field('id,name,bname,jump_url')->find('array');
 			    ?>
-			    {loop $columnList $value}
+			    {loop $topList $value}
                 	<li><a href="{$value['jump_url']}"><i></i><b style="line-height: 45px;">{$value['bname']}</b></a></li>
                 {/loop}
             </ul>
