--- a/appliaction/study/view/index/about/index_en.html
+++ b/appliaction/study/view/index/about/index_en.html
@@ -12,6 +12,7 @@
 	<script src="/ststic/study/js/jquery.min.js"></script>
     <script src="/ststic/study/js/jquery.SuperSlide.2.1.1.js"></script>
     <script src="/ststic/study/js/common.js"></script>
+    <script type="text/javascript" src="/vendor/layer/layer.js"></script>
 </head>
 
 <body>
