--- a/appliaction/study/view/index/index/index.html
+++ b/appliaction/study/view/index/index/index.html
@@ -13,6 +13,7 @@
     <script src="/ststic/study/js/swiper.min.js"></script>
     <script src="/ststic/study/js/swiper.animate1.0.2.min.js"></script></head>
     <script src="/ststic/study/js/common.js"></script>
+    <script type="text/javascript" src="/vendor/layer/layer.js"></script>
 </head>
 
 <body>
