--- a/appliaction/study/view/index/public/top.html
+++ b/appliaction/study/view/index/public/top.html
@@ -3,11 +3,11 @@
         {if !$this->uid}
         <div class="header_left fl"><b>您好，欢迎来到恒鼎学院！</b><a href="{F:url('/index/user/login')}">登录<i>|</i></a><a href="{F:url('/index/user/register')}">注册</a></div>
         {else}
-        <div class="header_left fl"><b>{$this->nickname} 您好，欢迎来到恒鼎学院！</b><a href="javascript:;" class="btn-ajax-post" data-id="" data-href="{F:url('/index/user/outlogin')}" data-tips="确定退出登录?">退出登录</a></div>
+        <div class="header_left fl"><b>{$this->nickname} 您好，欢迎来到恒鼎学院！</b><a href="javascript:;" class="btn-ajax-post" data-id="" config-href="{F:url('/index/user/outlogin')}" config-tips="确定退出登录?">退出登录</a></div>
         {/if}
         <div class="ch_en" href="javascript:;" >
         	<a href="javascript:;" class="btn-ajax-post on">中文</a>|
-        	<a href="javascript:;" class="btn-ajax-post" data-id="" data-href="/common/version/switchlg">English</a>
+        	<a href="javascript:;" class="btn-ajax-post" data-id="" config-href="/common/version/switchlg">English</a>
         </div>
         <div class="header_right fr"><input /><a class="search_ico" href="javascript:;">搜索</a><a href="{F:url('/index/user/login')}" class="user_ico"><i></i>会员中心</a></div>
     </div>
