--- a/appliaction/study/view/index/user/login.html
+++ b/appliaction/study/view/index/user/login.html
@@ -8,8 +8,6 @@
 	<link rel="stylesheet" href="/ststic/study/css/base.css">
 	<link rel="stylesheet" href="/ststic/study/css/index.css">
     <link rel="stylesheet" href="/ststic/study/css/mob.css">
-    <script src="/ststic/study/js/jquery.min.js"></script>
-
 </head>
 <body style="overflow:hidden">
 	<div class="header">
@@ -47,9 +45,10 @@
     </div>
     <!-- sections control -->
 </body>
-	<script src="/ststic/study/js/anime.min.js"></script>
-    <script src="/ststic/study/js/interaction.js"></script>
-    <script src="/ststic/study/js/common.js"></script>
+    <script type="text/javascript" src="/ststic/study/js/jquery.min.js"></script>
+	<script type="text/javascript" src="/ststic/study/js/anime.min.js"></script>
+    <script type="text/javascript" src="/ststic/study/js/interaction.js"></script>
+    <script type="text/javascript" src="/ststic/study/js/common.js"></script>
     <script type="text/javascript" src="/vendor/layer/layer.js"></script>
 <script>
 $(".selemenu").click(function(){
