--- a/appliaction/study/view/user/public/left_menus.html
+++ b/appliaction/study/view/user/public/left_menus.html
@@ -48,9 +48,9 @@
                 	<a href="{F:url('/user/personal/index')}">资料管理</a>
                 </li>
 
-                <li><a href="#">退出登录</a></li>
+                <li><a href="javascript:;" class="btn-ajax-post" data-id="" config-href="{F:url('/index/user/outlogin')}" config-tips="确定退出登录?">退出登录</a></li>
                 
-                <div class="bottom_c_e"><a class="q_h">中文</a>|<a href="javascript:;" class="btn-ajax-post" data-id="" data-href="/common/version/switchlg">English</a></div>
+                <div class="bottom_c_e"><a class="q_h">中文</a>|<a href="javascript:;" class="btn-ajax-post" data-id="" config-href="/common/version/switchlg">English</a></div>
             </ul>
         </nav>
     </div>
