--- a/appliaction/admin/view/content/app_version/lists.html
+++ b/appliaction/admin/view/content/app_version/lists.html
@@ -17,7 +17,7 @@
 							<h5>APP版本管理</h5>
 						</div>
 						<div class="pull-right">
-							<a class="btn btn-primary btn-open" data-href="{F:url('edit')}"  data-height="550px" data-width="556px">添加版本</a>
+							<a class="btn btn-primary btn-open" config-href="{F:url('edit')}"  config-height="550px" config-width="556px">添加版本</a>
 						</div>
 					</div>
 					<form class="form-inline ng-pristine ng-valid" action=""  method="get">
@@ -48,7 +48,7 @@
 											<td>{$value['version']}</td>
 											<td><img src="{$value['thumb']}"></td>
 											<td align='center'>
-												<a data-href="{F:url('edit',array('id'=>$value['id']))}"  data-height="250px" data-width="356px"  data-title="编辑分类"  class="btn-open">编辑</a>
+												<a config-href="{F:url('edit',array('id'=>$value['id']))}"  config-height="250px" config-width="356px"  config-title="编辑分类"  class="btn-open">编辑</a>
 											</td>
 										</tr>
 										{/loop}
