--- a/appliaction/admin/view/content/integral_rul/lists.html
+++ b/appliaction/admin/view/content/integral_rul/lists.html
@@ -17,7 +17,7 @@
 							<h5>积分赠送规则</h5>
 						</div>
 						<div class="pull-right">
-							<a class="btn btn-primary btn-open" data-href="{F:url('edit')}" data-height="500px" data-width="356px">添加规则</a>
+							<a class="btn btn-primary btn-open" config-href="{F:url('edit')}" config-height="500px" config-width="356px">添加规则</a>
 						</div>
 					</div>
 					<form class="form-inline ng-pristine ng-valid" action=""  method="get">
@@ -51,13 +51,13 @@
 											<td>{$value['value']}</td>
 											<td>
 												{if $value['status']}
-													<a href="javascript:;" style="color: green">启用</a>
+													<b style="color: green">启用</b>
 												{else}
-													<a href="javascript:;" style="color: red">禁用</a>
+													<b style="color: red">禁用</b>
 												{/if}
 											</td>
 											<td align='center'>
-												<a data-href="{F:url('edit',array('id'=>$value['id']))}"  data-height="500px" data-width="356px"  data-title="修改规则"  class="btn-open">编辑</a>
+												<a config-href="{F:url('edit',array('id'=>$value['id']))}"  config-height="500px" config-width="356px"  config-title="修改规则"  class="btn-open">编辑</a>
 											</td>
 										</tr>
 										{/loop}
