--- a/appliaction/admin/view/setting/group/index.html
+++ b/appliaction/admin/view/setting/group/index.html
@@ -17,7 +17,7 @@
 							<h5>管理分组列表</h5>
 						</div>
 						<div class="pull-right">
-							<a class="btn btn-primary btn-open"  data-href="{F:url('edit')}"  data-height="300px" data-width="356px">添加管理组</a>
+							<a class="btn btn-primary btn-open"  config-href="{F:url('edit')}"  config-height="300px" config-width="356px">添加管理组</a>
 						</div>
 					</div>
 					<div class="console-form">
@@ -47,9 +47,9 @@
 												{/if}
 											</td>
 											<td align='center'>
-												<a data-title="编辑管理员" class="btn-open"  data-href="{F:url('edit',array('id'=>$value['id']))}"  data-height="300px" data-width="356px">编辑</a>
+												<a config-title="编辑管理员" class="btn-open"  config-href="{F:url('edit',array('id'=>$value['id']))}"  config-height="300px" config-width="356px">编辑</a>
 												<span class="text-explode">|</span>
-												<a data-title="权限管理" class="btn-open"  data-href="{F:url('power/lists',array('id'=>$value['id']))}"  data-height="80%" data-width="80%">权限</a>
+												<a config-title="权限管理" class="btn-open"  config-href="{F:url('power/lists',array('id'=>$value['id']))}"  config-height="80%" config-width="80%">权限</a>
 											</td>
 										</tr>
 										{/loop}
