--- a/appliaction/admin/view/setting/menus/index.html
+++ b/appliaction/admin/view/setting/menus/index.html
@@ -18,7 +18,7 @@
 								<h5>菜单列表</h5>
 							</div>
 							<div class="pull-right">
-								<a class="btn btn-primary btn-open" data-href="{F:url('edit')}"  data-height="750px">添加菜单</a>
+								<a class="btn btn-primary btn-open" config-href="{F:url('edit')}"  config-height="750px">添加菜单</a>
 								<a class="btn btn-primary btn-comply">更新排序</a>
 							</div>
 						</div>
@@ -59,9 +59,9 @@
 												<td align='center'>{$value['status']}</td>
 												<td align='center'>{$value['is_show_copy']}</td>
 												<td align='center'>
-													<a class="btn-open" data-href="{F:url('edit',array('parentid'=>$value['id']))}" data-title="编辑菜单" data-height="800px" data-parentId="list.id">添加子菜单</a>
+													<a class="btn-open" config-href="{F:url('edit',array('parentid'=>$value['id']))}" config-title="编辑菜单" config-height="800px" data-parentId="list.id">添加子菜单</a>
 													<span class="text-explode">|</span>
-													<a class="btn-open" data-href="{F:url('edit',array('id'=>$value['id']))}" data-title="编辑菜单" data-id="list.id" data-tooltip="{$value['name']}"  data-height="800px">编辑</a>
+													<a class="btn-open" config-href="{F:url('edit',array('id'=>$value['id']))}" config-title="编辑菜单" data-id="list.id" config-tooltip="{$value['name']}"  config-height="800px">编辑</a>
 													<span class="text-explode">|</span>
 													<a onclick="del(list.id)">删除</a>
 												</td>
