--- a/appliaction/admin/view/setting/personal/edit.html
+++ b/appliaction/admin/view/setting/personal/edit.html
@@ -19,7 +19,7 @@
 								<h5>参数配置</h5>
 							</div>
 							<div class="pull-right">
-								<a class="btn btn-primary btn-open" data-href="{F:url('edit')}"  data-height="750px">添加配置</a>
+								<a class="btn btn-primary btn-open" config-href="{F:url('edit')}"  config-height="750px">添加配置</a>
 							</div>
 						</div>
 						<div class="console-form">
