--- a/appliaction/study/view/index/bbs/index.html
+++ b/appliaction/study/view/index/bbs/index.html
@@ -35,9 +35,9 @@
                  <ul class="jy_news">
                     {loop $list $value}
                     <li>
-                        <div class="img"><a href="#"><img src="{$value['thumb']}" / ></a></div>
-                        <p class="name"><a href="#">{$value['title']}</a></p>
-                        <p class="fu_n">{$value['description']}..<a href="#">[更多]</a></p>
+                        <div class="img"><a href="javascript:;"><img src="{$value['thumb']}" / ></a></div>
+                        <p class="name"><a href="javascript:;">{$value['title']}</a></p>
+                        <p class="fu_n">{$value['description']}..<a href="javascript:;">[更多]</a></p>
                         <p class="time"><span>发布时间:{F:date('Y/m/d',$value['publish_time'])}</span><i>浏览（{$value['hot']}）</i><i>回复（{$value['comment_num']}）</i></p>
                     </li>
                     {/loop}
@@ -45,8 +45,8 @@
                 {else}
             	<div class="tie_list clearfix">
                 	<div class="choose_tie clearfix">
-                    	<a href="#" class="on a_ch">全部</a><a href="#" class="a_ch">精华</a><a href="#" class="a_ch">排序<span>最新发帖</span></a>
-                        <a class="btn_tie" href="#">我要发帖</a>
+                    	<a href="javascript:;" class="on a_ch">全部</a><a href="javascript:;" class="a_ch">精华</a><a href="javascript:;" class="a_ch">排序<span>最新发帖</span></a>
+                        <a class="btn_tie" href="javascript:;">我要发帖</a>
                     </div>
                     {loop $list $value}
                 	<div class="tie_li clearfix">
@@ -59,7 +59,7 @@
                     </div>
                     {/loop}
                     <div class="clearfix"></div><br /><br /><br />
-                <div class="page"><p><b>2</b>/6</p><a href="#">上一页</a><a href="#">下一页</a></div>
+                <div class="page"><p><b>2</b>/6</p><a href="javascript:;">上一页</a><a href="javascript:;">下一页</a></div>
                 </div>
                 {/if}
             </div>
@@ -68,12 +68,12 @@
                 <div class="rec rec_ht">
                 	<h3>热门话题</h3>
                     <ul>
-                    	<li><a href="#">【留学指南】北京一名房东签卖房合同后反悔 被法院强制过户</a></li>
-                    	<li><a href="#">【留学指南】北京一名房东签卖房合同后反悔 被法院强制过户</a></li>
-                    	<li><a href="#">【留学指南】北京一名房东签卖房合同后反悔 被法院强制过户</a></li>
-                    	<li><a href="#">【留学指南】北京一名房东签卖房合同后反悔 被法院强制过户</a></li>
-                    	<li><a href="#">【留学指南】北京一名房东签卖房合同后反悔 被法院强制过户</a></li>
-                    	<li><a href="#">【留学指南】北京一名房东签卖房合同后反悔 被法院强制过户</a></li>
+                    	<li><a href="javascript:;">【留学指南】北京一名房东签卖房合同后反悔 被法院强制过户</a></li>
+                    	<li><a href="javascript:;">【留学指南】北京一名房东签卖房合同后反悔 被法院强制过户</a></li>
+                    	<li><a href="javascript:;">【留学指南】北京一名房东签卖房合同后反悔 被法院强制过户</a></li>
+                    	<li><a href="javascript:;">【留学指南】北京一名房东签卖房合同后反悔 被法院强制过户</a></li>
+                    	<li><a href="javascript:;">【留学指南】北京一名房东签卖房合同后反悔 被法院强制过户</a></li>
+                    	<li><a href="javascript:;">【留学指南】北京一名房东签卖房合同后反悔 被法院强制过户</a></li>
                     </ul>
                 
                 </div>
@@ -82,12 +82,12 @@
                 	<h3>推荐课程</h3>
                 	<ul class="kc_rec">
                         <li>
-                            <div class="imgs"><a href="#"><img src="images/kc1.jpg" /></a></div>
+                            <div class="imgs"><a href="javascript:;"><img src="images/kc1.jpg" /></a></div>
                             <div class="name">雅思冲刺雅思冲刺雅思冲刺雅思冲刺雅思冲刺雅思冲刺雅思冲刺雅思冲刺雅思冲刺雅思冲刺雅思冲刺雅思冲刺7.5分课程</div>
                             <div class="keshi"><span><i></i>证书颁发</span><span><i></i>一对一授课</span></div>
                         </li>
                         <li>
-                            <div class="imgs"><a href="#"><img src="images/kc2.jpg" /></a></div>
+                            <div class="imgs"><a href="javascript:;"><img src="images/kc2.jpg" /></a></div>
                             <div class="name">雅思冲刺7.5分课程</div>
                             <div class="keshi"><span><i></i>证书颁发</span><span><i></i>一对一授课</span></div>
                         </li>
@@ -99,11 +99,11 @@
 				<div class="focusBox rec" >
                 	<h3>学员风采</h3>
                 	<ul class="pic" >
-                		<li ><a href="#" target="_blank"><img src="images/team1.jpg"></a><span>张散散——雅思培训</span></li>
-                		<li ><a href="#" target="_blank"><img src="images/team2.jpg"></a><span>张散散——雅思培训</span></li>
-                		<li ><a href="#" target="_blank"><img src="images/team3.jpg"></a><span>张散散——雅思培训</span></li>
-                		<li ><a href="#" target="_blank"><img src="images/team4.jpg"></a><span>张散散——雅思培训</span></li>
-                		<li ><a href="#" target="_blank"><img src="images/team5.jpg"></a><span>张散散——雅思培训</span></li>
+                		<li ><a href="javascript:;" target="_blank"><img src="images/team1.jpg"></a><span>张散散——雅思培训</span></li>
+                		<li ><a href="javascript:;" target="_blank"><img src="images/team2.jpg"></a><span>张散散——雅思培训</span></li>
+                		<li ><a href="javascript:;" target="_blank"><img src="images/team3.jpg"></a><span>张散散——雅思培训</span></li>
+                		<li ><a href="javascript:;" target="_blank"><img src="images/team4.jpg"></a><span>张散散——雅思培训</span></li>
+                		<li ><a href="javascript:;" target="_blank"><img src="images/team5.jpg"></a><span>张散散——雅思培训</span></li>
                 	</ul>
                 	<a class="prev" href="javascript:void(0)" style="opacity: 0.2; display: none;"></a>
                 	<a class="next" href="javascript:void(0)" style="opacity: 0.2; display: none;"></a>
@@ -122,33 +122,91 @@
     </div>
     
       	<div class="xiugais  clearfix">
-        	<div class="xiugai_box clearfix">
-            	<div class="close"><a href="#" class="closebox"></a></div>
-                <b>发帖</b>
-                <p><span>板块选择</span><input type="text"  placeholder="请输入" class="mokuai"/></p>
-                <p><span>标题</span><input type="text"  placeholder="请输入"/></p>
-                <p class="add-input">
-                    <a href="javascript:;">上传图片</a>
-                    <input type="file">
-                    <span>内容</span>
-                    <textarea name="" cols="" rows="">
-                    </textarea>
-                </p>
-                <a class="btn_xg" href="#">发布帖子</a>
-            </div>
+            <form>
+            	<div class="xiugai_box clearfix">
+                	<div class="close"><a href="javascript:;" class="closebox"></a></div>
+                    <b>发帖</b>
+                    <p><span>板块选择</span>
+                    <select class="mokuai">
+                        {loop $columnList $value}
+                            {if $value['id'] != 26}
+                                <option value="{$value['id']}">{$value['name']}</option>
+                            {/if}
+                        {/loop}
+                    </select>
+                    </p>
+                    <p><span>标题</span><input type="text"  placeholder="请输入"/></p>
+                    <p class="add-input">
+                        <a href="insert-img">插入图片</a>
+                        <input type="file" id="insert-img">
+                        <span>内容</span>
+                            <textarea name="content" cols="" rows="" style="display: none;"></textarea>
+                            <div class="textarea" contenteditable="true"></div>
+                    </p>
+                    <a class="btn_xg" href="javascript:;">发布帖子</a>
+                </div>
+            </form>
         </div>  
     <div class="clearfix"></div>
     {include public/footer}
     
 </body>
+<style type="text/css">
+</style>
 <script>
-  $(".btn_tie").click(function(){
-	  $(".xiugais").slideToggle();
-  })
-  $(".closebox ").click(function(){
+    $(".btn_tie").click(function(){
+      var token = getCookie('token');
+      if(!token){
+        layer.msg('请登录');
+        setTimeout(function(){
+            window.location.href = '/index/user/login/s/return/'+encodeURIComponent(window.location.href);
+        },1000)
+        return;
+      }else{
+        $(".xiugais").slideToggle();
+      }
+    })
+    $(".closebox ").click(function(){
 		  $(".xiugais").css("display","none");
-	  })
+    })
 
+    //插入图片
+    $('.insert-img').click(function(){
+        $('input[id=insert-img]').wrap('<form>').closest('form').get(0).reset();
+        $('input[id=insert-img]').trigger('click');
+    })
+
+    $('#insert-img').change(function(e){
+        var files = e.target.files || e.dataTransfer.files;
+        var reader = new FileReader();
+        reader.readAsDataURL(files[0]); 
+        reader.onload = function(e){
+            $.post('/common/upload/up_base64_img',{data:e.target.result,path:'test'},function(result){
+                if(result.status){
+                    $('.textarea').append('<img src="'+result.data+'" width="80%">');
+                }else{
+                    layer.msg(result.msg);
+                }
+
+                //删除照片
+                $('.btn-del-img').click(function(){
+                    //console.log($(this).parent().html());
+                    $(this).parent().remove();
+                    bindValue();    
+                })
+
+            },"json");
+        }
+    });
+
+    function getCookie(name)
+    {
+        var arr,reg=new RegExp("(^| )"+name+"=([^;]*)(;|$)");
+        if(arr=document.cookie.match(reg))
+            return unescape(arr[2]);
+        else
+            return null;
+    }
 </script>
 <script>jQuery(".focusBox").hover(function(){ jQuery(this).find(".prev,.next").stop(true,true).fadeTo("show",0.2) },function(){ jQuery(this).find(".prev,.next").fadeOut() });
 jQuery(".focusBox").slide({ mainCell:".pic",effect:"fold", autoPlay:true, delayTime:600, trigger:"click"});	</script>
