--- a/appliaction/study/view/user/personal/edit.html
+++ b/appliaction/study/view/user/personal/edit.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="/ststic/study/css/base.css">
     <link rel="stylesheet" href="/ststic/study/css/center.css">
     <link rel="stylesheet" href="/ststic/study/css/u_mob.css"> 
-  
+
+    <script type="text/javascript" src="/ststic/study/js/jquery.min.js"></script>
     <script type="text/javascript" src="/ststic/study/js/menu.js"></script>
     <script type="text/javascript" src="/ststic/study/js/common.js"></script>
     <script type="text/javascript" src="/vendor/layer/layer.js"></script>
@@ -31,34 +32,59 @@
             </div>
 
 
-       	<div class="t_cr_right  fr">
-        	<form class="form_div">
-            <p><span>头像：</span><div class="img"><a href="#"><img src="images/toux.jpg" /></a></div></p>
-            <p><span>用户名：</span><input type="text" class="input_t"  placeholder="请输入用户名"/></p>
-            <p><span>姓名：</span><input type="text" class="input_t"  placeholder="请输入真实姓名"/></p>
-            <p><span>手机号：</span><input type="text" class="input_t1"  placeholder="请输入原手机号验证码"/><a href="#" class="btn_yz">获取验证码</a></p>
-             <p><span>再次输入：</span><input type="text" class="input_t yanz"  placeholder="请输入新手机号"/></p>
-            <p><span>电子邮箱：</span><input type="text" class="input_t"  placeholder=""/></p>
-            <div class="lines"></div>
-            <i class="dynamicWrapper"></i>
-            <a class="btn_bc" href="#">保存</a>
-          </form>
-        </div>
+           	<div class="t_cr_right  fr">
+            	<form class="form_div form-horizontal">
+                    <input type="file" style="display:none;" id="avatar">
+                    <input type="hidden" name="avatar" value="{$data['avatar']}" >
+                    <p><span>头像：</span><div class="img"><a href="javascript:;" class="avatar"><img src="{$data['avatar']}" width="75" height="75" /></a></div></p>
+                    <p><span>用户名：</span><input type="text" class="input_t"  value="{$data['username']}" disabled /></p>
+                    <p><span>昵称：</span><input type="text" class="input_t"  name="nickname" value="{$data['nickname']}"  placeholder="请输入昵称"/></p>
+                    <p><span>姓名：</span><input type="text" class="input_t"  name="real_name" value="{$data['real_name']}"  placeholder="请输入真实姓名"/></p>
+                <!--     <p><span>手机号：</span><input type="text" class="input_t1" name="mobile"  disabled value="{$data['mobile']}" placeholder="请输入原手机号验证码"/><a href="#" class="btn_yz">获取验证码</a></p>
+                <p><span>验证码：</span><input type="text" class="input_t yanz" name="code"  placeholder="请输入验证码"/></p>
+                <p><span>新手机号：</span><input type="text" class="input_t" name="new_mobile"  placeholder="请输入新手机号"/></p> -->
+                    <p><span>电子邮箱：</span><input type="text" class="input_t" name="mail" value="{$data['mail']}"  placeholder="请输入点赞邮箱"/></p>
+                    <p><span>地址：</span><input type="text" class="input_t"  name="address" value="{$data['address']}"  placeholder="请输入家庭地址"/></p>
+                    <div class="lines"></div>
+                    <i class="dynamicWrapper"></i>
+                    <a class="btn_bc btn-comply" config-true-url="{F:url('index')}" href="javascript:;">保存</a>
+                  </form>
+            </div>
             
-        
         </div>
    </div>
 </body>
 <script type="text/javascript">
 $(document).ready(function(){
-    // date time picker
-    if($(".iDate.date").length>0){
-        $(".iDate.date").datetimepicker({
-            locale:"zh-cn",
-            format:"YYYY-MM-DD",
-            dayViewHeaderFormat:"YYYY年 MMMM"
-        });
-    }
+    //上传
+    $('.avatar').click(function(){
+        $('input[id=avatar]').wrap('<form>').closest('form').get(0).reset();
+        $('input[id=avatar]').trigger('click');
+    })
+
+    $('#avatar').change(function(e){
+        var files = e.target.files || e.dataTransfer.files;
+        var reader = new FileReader();
+        reader.readAsDataURL(files[0]); 
+        reader.onload = function(e){
+            $.post('/common/upload/up_base64_img',{data:e.target.result,path:'avatar'},function(result){
+                if(result.status){
+                    $('.avatar').find('img').attr('src',result.data);
+                    $('input[name=avatar]').val(result.data);
+                }else{
+                    layer.msg(result.msg);
+                }
+
+                //删除照片
+                $('.btn-del-img').click(function(){
+                    //console.log($(this).parent().html());
+                    $(this).parent().remove();
+                    bindValue();    
+                })
+
+            },"json");
+        }
+    });
 })
 </script>
 
