--- a/appliaction/study/view/user/personal/edit_password.html
+++ b/appliaction/study/view/user/personal/edit_password.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="/ststic/study/css/base.css">
     <link rel="stylesheet" href="/ststic/study/css/center.css">
     <link rel="stylesheet" href="/ststic/study/css/u_mob.css"> 
-	
+
+    <script type="text/javascript" src="/ststic/study/js/jquery.min.js"></script>	
     <script type="text/javascript" src="/ststic/study/js/menu.js"></script>
     <script type="text/javascript" src="/ststic/study/js/common.js"></script>
     <script type="text/javascript" src="/vendor/layer/layer.js"></script>
@@ -31,10 +32,10 @@
 
      	<div class="t_cr_right t_ppcont fr">
         	<form class="form_div">
-            	<p><span>手机号：</span><input type="text" class="input_t1"  placeholder="请输入手机号"/><a href="#" class="btn_yz">获取验证码</a></p>
-            	<p><span>验证码：</span><input type="text" class="input_t yanz"  placeholder="请输入验证码"/></p>
-            	<p><span>新密码：</span><input type="text" class="input_t"  placeholder="请输入新密码"/></p>
-            	<p><span>确认密码：</span><input type="text" class="input_t"  placeholder="请输入新密码"/></p>
+            	<p><span>手机号：</span><input type="text" class="input_t1" name="mobile" value="{$data['mobile']}"  disabled/><a href="#" class="btn_yz">获取验证码</a></p>
+            	<p><span>验证码：</span><input type="text" class="input_t yanz" name="code"  placeholder="请输入验证码"/></p>
+            	<p><span>新密码：</span><input type="text" class="input_t" name="password"  placeholder="请输入新密码"/></p>
+            	<p><span>确认密码：</span><input type="text" class="input_t" name="passowrd2"  placeholder="请输入新密码"/></p>
             	<a class="btn_bc" href="#">保存</a>
             </form>
         
